Дополняєт иконка конверт

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         </ul>
       </nav>
       <address class="nav-svjaz">
+        <svg class="nav-svjaz-convert">
+          <use href="./images/symbol-defs.svg#icon-convert"></use>
+        </svg>
+
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111">+38 096 111 11 11 </a>
       </address>
@@ -57,6 +61,7 @@
         <h2 class="scrit">Преимущества</h2>
         <ul class="cape">
           <li class="top-menu">
+            <img src="./images/vnimanie.svg" alt="микроскоп">
             <h3 class="pros-title">Внимание к деталям</h3>
             <p class="pros-absaz">
               Идейные соображения, а также начало повседневной работы по
@@ -64,6 +69,7 @@
             </p>
           </li>
           <li class="top-menu">
+            <img src="./images/punctuainost.svg" alt="часы">
             <h3 class="pros-title">Пунктуальность</h3>
             <p class="pros-absaz">
               Задача организации, в особенности же рамки и место обучения
@@ -71,6 +77,7 @@
             </p>
           </li>
           <li class="top-menu">
+            <img src="./images/planirovanie.svg" alt="ноутбук">
             <h3 class="pros-title">Планирование</h3>
             <p class="pros-absaz">
               Равным образом консультация с широким активом в значительной
@@ -78,6 +85,7 @@
             </p>
           </li>
           <li class="top-menu">
+            <img src="./images/sovremennie_tehnology.svg" alt="космонавт" />
             <h3 class="pros-title">Современные технологии</h3>
             <p class="pros-absaz">
               Значимость этих проблем настолько очевидна, что реализация
