--- a/index.html
+++ b/index.html
@@ -32,141 +32,140 @@
         </ul>
       </nav>
       <address class="nav-svjaz">
-        <svg class="nav-svjaz-convert">
-          <use href="./images/symbol-defs.svg#icon-convert"></use>
-        </svg>
+        <a href="mailto:info@devstudio.com">
+          <svg class="nav-svjaz-convert">
+            <use href="./images/symbol-defs.svg#convert.svg">
+            </use>
+          </svg>
+          info@devstudio.com</a>
 
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11 </a>
-      </address>
-    </div>
-  </header>
+        <a href="tel:+380961111111">
+          <svg class="nav-svjaz-phone" +38 096 111 11 11 </a> </address> </div> </header> <main>
 
-  <main>
+            <!--Эффективные решения для вашего бизнеса-->
+            <section class="geroj">
+              <div class="geroj-content">
+                <h1 class="geroj-title">
+                  Эффективные решения<br />для вашего бизнеса
+                </h1>
+                <button type="button" class="geroj-cnopca">Заказать услугу</button>
+              </div>
+            </section>
 
-    <!--Эффективные решения для вашего бизнеса-->
-    <section class="geroj">
-      <div class="geroj-content">
-        <h1 class="geroj-title">
-          Эффективные решения<br />для вашего бизнеса
-        </h1>
-        <button type="button" class="geroj-cnopca">Заказать услугу</button>
-      </div>
-    </section>
+            <!--Преимущества-->
+            <section class="rabot pros">
+              <div class="container">
+                <!--Этот заголовок будет скрывать-->
+                <h2 class="scrit">Преимущества</h2>
+                <ul class="cape">
+                  <li class="top-menu">
+                    <img src="./images/vnimanie.svg" alt="микроскоп">
+                    <h3 class="pros-title">Внимание к деталям</h3>
+                    <p class="pros-absaz">
+                      Идейные соображения, а также начало повседневной работы по
+                      формированию позиции.
+                    </p>
+                  </li>
+                  <li class="top-menu">
+                    <img src="./images/punctuainost.svg" alt="часы">
+                    <h3 class="pros-title">Пунктуальность</h3>
+                    <p class="pros-absaz">
+                      Задача организации, в особенности же рамки и место обучения
+                      кадров влечет за собой.
+                    </p>
+                  </li>
+                  <li class="top-menu">
+                    <img src="./images/planirovanie.svg" alt="ноутбук">
+                    <h3 class="pros-title">Планирование</h3>
+                    <p class="pros-absaz">
+                      Равным образом консультация с широким активом в значительной
+                      степени обуславливает.
+                    </p>
+                  </li>
+                  <li class="top-menu">
+                    <img src="./images/sovremennie_tehnology.svg" alt="космонавт" />
+                    <h3 class="pros-title">Современные технологии</h3>
+                    <p class="pros-absaz">
+                      Значимость этих проблем настолько очевидна, что реализация
+                      плановых заданий.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </section>
 
-    <!--Преимущества-->
-    <section class="rabot pros">
-      <div class="container">
-        <!--Этот заголовок будет скрывать-->
-        <h2 class="scrit">Преимущества</h2>
-        <ul class="cape">
-          <li class="top-menu">
-            <img src="./images/vnimanie.svg" alt="микроскоп">
-            <h3 class="pros-title">Внимание к деталям</h3>
-            <p class="pros-absaz">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="top-menu">
-            <img src="./images/punctuainost.svg" alt="часы">
-            <h3 class="pros-title">Пунктуальность</h3>
-            <p class="pros-absaz">
-              Задача организации, в особенности же рамки и место обучения
-              кадров влечет за собой.
-            </p>
-          </li>
-          <li class="top-menu">
-            <img src="./images/planirovanie.svg" alt="ноутбук">
-            <h3 class="pros-title">Планирование</h3>
-            <p class="pros-absaz">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="top-menu">
-            <img src="./images/sovremennie_tehnology.svg" alt="космонавт" />
-            <h3 class="pros-title">Современные технологии</h3>
-            <p class="pros-absaz">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </div>
-    </section>
+            <!--Чем мы занимаемся-->
+            <section class="rabot cartinca">
+              <div class="container">
+                <h2 class="cartinca-title">Чем мы занимаемся</h2>
+                <ul class="cape">
+                  <li class="top-menu">
+                    <img src="./images/block-chema.jpg" width="370" height="294"
+                      alt="планшет, пальцы на клавиатуре, нарисованная блок-схема на листе" />
+                  </li>
+                  <li class="top-menu">
+                    <img src="./images/nout.jpg" width="370" height="294"
+                      alt="пальцы одной руки на клавиатуре включённого ноутбука, смартфон в другой руке" />
+                  </li>
+                  <li class="top-menu">
+                    <img src="./images/planshet.jpg" width="370" height="294"
+                      alt="цветная пиктограмма на включенном планшете" />
+                  </li>
+                </ul>
+              </div>
+            </section>
 
-    <!--Чем мы занимаемся-->
-    <section class="rabot cartinca">
-      <div class="container">
-        <h2 class="cartinca-title">Чем мы занимаемся</h2>
-        <ul class="cape">
-          <li class="top-menu">
-            <img src="./images/block-chema.jpg" width="370" height="294"
-              alt="планшет, пальцы на клавиатуре, нарисованная блок-схема на листе" />
-          </li>
-          <li class="top-menu">
-            <img src="./images/nout.jpg" width="370" height="294"
-              alt="пальцы одной руки на клавиатуре включённого ноутбука, смартфон в другой руке" />
-          </li>
-          <li class="top-menu">
-            <img src="./images/planshet.jpg" width="370" height="294"
-              alt="цветная пиктограмма на включенном планшете" />
-          </li>
-        </ul>
-      </div>
-    </section>
+            <!--Наша команда-->
+            <section class="rabot comanda">
+              <div class="container">
+                <h2 class="comanda-title">Наша команда</h2>
+                <ul class="cape">
+                  <li class="comanda-photo">
+                    <img src="./images/foto-igor.jpg" alt="фото Игоря" width="270" height="260" class="photo igor" />
+                    <h4 class="name">Игорь Демьяненко</h4>
+                    <p lang="en" class="profession">Product Designer</p>
+                  </li>
+                  <li class="comanda-photo">
+                    <img src="./images/foto-olga.jpg" alt="девушка улыбается  фото Ольги" width="270" height="260" />
+                    <h4 class="name">Ольга Репина</h4>
+                    <p lang="en" class="profession">Frontend Developer</p>
+                  </li>
+                  <li class="comanda-photo">
+                    <img src="./images/foto-nikolaj.jpg" alt="фото Николая" width="270" height="260" />
+                    <h4 class="name">Николай Тарасов</h4>
+                    <p lang="en" class="profession">Marketing</p>
+                  </li>
+                  <li class="comanda-photo">
+                    <img src="./images/foto-mihail.jpg" alt="фото Михаила" width="270" height="260" />
+                    <h4 class="name">Михаил Ермаков</h4>
+                    <p lang="en" class="profession">UI Designer</p>
+                  </li>
+                </ul>
+              </div>
+            </section>
 
-    <!--Наша команда-->
-    <section class="rabot comanda">
-      <div class="container">
-        <h2 class="comanda-title">Наша команда</h2>
-        <ul class="cape">
-          <li class="comanda-photo">
-            <img src="./images/foto-igor.jpg" alt="фото Игоря" width="270" height="260" class="photo igor" />
-            <h4 class="name">Игорь Демьяненко</h4>
-            <p lang="en" class="profession">Product Designer</p>
-          </li>
-          <li class="comanda-photo">
-            <img src="./images/foto-olga.jpg" alt="девушка улыбается  фото Ольги" width="270" height="260" />
-            <h4 class="name">Ольга Репина</h4>
-            <p lang="en" class="profession">Frontend Developer</p>
-          </li>
-          <li class="comanda-photo">
-            <img src="./images/foto-nikolaj.jpg" alt="фото Николая" width="270" height="260" />
-            <h4 class="name">Николай Тарасов</h4>
-            <p lang="en" class="profession">Marketing</p>
-          </li>
-          <li class="comanda-photo">
-            <img src="./images/foto-mihail.jpg" alt="фото Михаила" width="270" height="260" />
-            <h4 class="name">Михаил Ермаков</h4>
-            <p lang="en" class="profession">UI Designer</p>
-          </li>
-        </ul>
-      </div>
-    </section>
+            </main>
 
-  </main>
+            <!--Футер-->
+            <footer class="bottom">
+              <div class="container">
+                <section class="bottom-cell">
+                  <!-- Заглавие будет скрыто -->
+                  <h2 class="scrit">Наши контакты</h2>
+                  <a href="./index.html" class="logo" lang="en">
+                    <span>Web</span>Studio</a>
+                  <address class="bottom-svjaz">
+                    <a href="https://goo.gl/maps/cJfqDqCZYwjDyBbn9" target="_blank" class="bottom-svjaz zvet">г. Киев,
+                      пр-т Леси
+                      Украинки, 26</a>
+                    <a href=" mailto:info@example.com" class="bottom-svjaz">info@example.com</a>
 
-  <!--Футер-->
-  <footer class="bottom">
-    <div class="container">
-      <section class="bottom-cell">
-        <!-- Заглавие будет скрыто -->
-        <h2 class="scrit">Наши контакты</h2>
-        <a href="./index.html" class="logo" lang="en">
-          <span>Web</span>Studio</a>
-        <address class="bottom-svjaz">
-          <a href="https://goo.gl/maps/cJfqDqCZYwjDyBbn9" target="_blank" class="bottom-svjaz zvet">г. Киев, пр-т Леси
-            Украинки, 26</a>
-          <a href=" mailto:info@example.com" class="bottom-svjaz">info@example.com</a>
+                    <a href="tel:+380991111111" class="bottom-svjaz">+38 099 111 11 11</a>
 
-          <a href="tel:+380991111111" class="bottom-svjaz">+38 099 111 11 11</a>
-
-        </address>
-      </section>
-    </div>
-  </footer>
+                  </address>
+                </section>
+              </div>
+            </footer>
 </body>
 
 </html>
