Оормила иконки наши преимущества

--- a/index.html
+++ b/index.html
@@ -58,32 +58,28 @@
                 <!--Этот заголовок будет скрывать-->
                 <h2 class="scrit">Преимущества</h2>
                 <ul class="cape">
-                  <li class="top-menu">
-                    <img src="./images/vnimanie.svg" alt="микроскоп">
+                  <li class="top-menu pros-microscop">
                     <h3 class="pros-title">Внимание к деталям</h3>
                     <p class="pros-absaz">
                       Идейные соображения, а также начало повседневной работы по
                       формированию позиции.
                     </p>
                   </li>
-                  <li class="top-menu">
-                    <img src="./images/punctuainost.svg" alt="часы">
+                  <li class="top-menu pros-hcasi">
                     <h3 class="pros-title">Пунктуальность</h3>
                     <p class="pros-absaz">
                       Задача организации, в особенности же рамки и место обучения
                       кадров влечет за собой.
                     </p>
                   </li>
-                  <li class="top-menu">
-                    <img src="./images/planirovanie.svg" alt="ноутбук">
+                  <li class="top-menu pros-nout">
                     <h3 class="pros-title">Планирование</h3>
                     <p class="pros-absaz">
                       Равным образом консультация с широким активом в значительной
                       степени обуславливает.
                     </p>
                   </li>
-                  <li class="top-menu">
-                    <img src="./images/sovremennie_tehnology.svg" alt="космонавт" />
+                  <li class="top-menu pros-cosmonavt">
                     <h3 class="pros-title">Современные технологии</h3>
                     <p class="pros-absaz">
                       Значимость этих проблем настолько очевидна, что реализация
