--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,17 @@
       </nav>
 
       <address class="nav-svjaz">
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a href="mailto:info@devstudio.com">
+          <svg class="nav-svjaz-convert">
+            <use href="./images/symbol-defs.svg#icon-convert">
+            </use>
+          </svg>info@devstudio.com</a>
+
+        <a href="tel:+380961111111">
+          <svg class="nav-svjaz-phone">
+            <use href="./images/symbol-defs.svg#icon-phone">
+            </use>
+          </svg>+38 096 111 11 11</a>
       </address>
     </div>
   </header>
