Присвоила имя sprit

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       <address class="nav-svjaz">
         <a href="mailto:info@devstudio.com">
           <svg class="nav-svjaz-convert">
-            <use href="./images/symbol-defs.svg#icon-convert">
+            <use href="./images/sprit.svg#icon-convert">
             </use>
           </svg>info@devstudio.com</a>
 
         <a href="tel:+380961111111">
           <svg class="nav-svjaz-phone">
-            <use href="./images/symbol-defs.svg#icon-phone">
+            <use href="./images/sprit.svg#icon-phone">
             </use>
           </svg>+38 096 111 11 11</a>
       </address>
@@ -127,32 +127,32 @@
             <h4 class="name">Игорь Демьяненко</h4>
             <p lang="en" class="profession">Product Designer</p>
 
-            <ul class="social-list list">
+            <ul class="social-list cape">
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs (2).svg#icon-instagram.svg"></use>
+                    <use href="./images/sprit.svg#icon-instagram.svg"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    <use href="./images/sprit.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    <use href="./images/sprit.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    <use href="./images/sprit.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -164,32 +164,32 @@
             <h4 class="name">Ольга Репина</h4>
             <p lang="en" class="profession">Frontend Developer</p>
 
-            <ul class="social-list list">
+            <ul class="social-list cape">
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs (2).svg#icon-instagram.svg"></use>
+                    <use href="./images/sprit.svg#icon-instagram.svg"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    <use href="./images/sprit.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    <use href="./images/sprit.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    <use href="./images/sprit.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -200,32 +200,32 @@
             <img src="./images/foto-nikolaj.jpg" alt="фото Николая" width="270" height="260" />
             <h4 class="name">Николай Тарасов</h4>
             <p lang="en" class="profession">Marketing</p>
-            <ul class="social-list list">
+            <ul class="social-list cape">
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs (2).svg#icon-instagram.svg"></use>
+                    <use href="./images/sprit.svg#icon-instagram.svg"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    <use href="./images/sprit.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    <use href="./images/sprit.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    <use href="./images/sprit.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -237,32 +237,32 @@
             <h4 class="name">Михаил Ермаков</h4>
             <p lang="en" class="profession">UI Designer</p>
 
-            <ul class="social-list list">
+            <ul class="social-list cape">
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs (2).svg#icon-instagram.svg"></use>
+                    <use href="./images/sprit.svg#icon-instagram.svg"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    <use href="./images/sprit.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    <use href="./images/sprit.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    <use href="./images/sprit.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -280,43 +280,43 @@
         <ul class="cape">
           <li class="top-menu">
             <a href="" class="list-item-link">
-              <svg class="list-item-link-svg" width="45" height="50">
-                <use href="./images/sprite.svg#icon-client-1"></use>
+              <svg class="list-item-link-svg">
+                <use href="./images/sprit.svg#icon-client-1"></use>
               </svg>
             </a>
           </li>
           <li class="top-menu">
             <a href="" class="list-item-link">
-              <svg class="list-item-link-svg" width="40" height="52">
-                <use href="./images/sprite.svg#icon-client-2"></use>
+              <svg class="list-item-link-svg">
+                <use href="./images/sprit.svg#icon-client-2"></use>
               </svg>
             </a>
           </li>
           <li class="top-menu">
             <a href="" class="list-item-link">
-              <svg class="list-item-link-svg" width="41" height="43">
-                <use href="./images/sprite.svg#icon-client-3"></use>
+              <svg class="list-item-link-svg">
+                <use href="./images/sprit.svg#icon-client-3"></use>
               </svg>
             </a>
           </li>
           <li class="top-menu">
             <a href="" class="list-item-link">
-              <svg class="list-item-link-svg" width="80" height="42">
-                <use href="./images/sprite.svg#icon-client-4"></use>
+              <svg class="list-item-link-svg">
+                <use href="./images/sprit.svg#icon-client-4"></use>
               </svg>
             </a>
           </li>
           <li class="top-menu">
             <a href="" class="list-item-link">
-              <svg class="list-item-link-svg" width="59" height="47">
-                <use href="./images/sprite.svg#icon-client-5"></use>
+              <svg class="list-item-link-svg">
+                <use href="./images/sprit.svg#icon-client-5"></use>
               </svg>
             </a>
           </li>
           <li class="top-menu">
             <a href="" class="list-item-link">
-              <svg class="list-item-link-svg" width="89" height="46">
-                <use href="./images/sprite.svg#icon-client-6"></use>
+              <svg class="list-item-link-svg">
+                <use href="./images/sprit.svg#icon-client-6"></use>
               </svg>
             </a>
           </li>
@@ -355,28 +355,28 @@
           <li class="social-list-item">
             <a href="" class="social-list-item-link">
               <svg class="social-list-item-svg">
-                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                <use href="./images/sprit.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-list-item">
             <a href="" class="social-list-item-link">
               <svg class="social-list-item-svg">
-                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                <use href="./images/sprit.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-list-item">
             <a href="" class="social-list-item-link">
               <svg class="social-list-item-svg">
-                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                <use href="./images/sprit.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-list-item">
             <a href="" class="social-list-item-link">
               <svg class="social-list-item-svg">
-                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                <use href="./images/sprit.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
