Добавила присоеденяйтесь в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,13 +36,13 @@
       <address class="nav-svjaz">
         <a href="mailto:info@devstudio.com">
           <svg class="nav-svjaz-convert">
-            <use href="./images/symbol-defs.svg#icon-convert">
+            <use href="./images/sprit.svg#icon-convert">
             </use>
           </svg>info@devstudio.com</a>
 
         <a href="tel:+380961111111">
           <svg class="nav-svjaz-phone">
-            <use href="./images/symbol-defs.svg#icon-phone">
+            <use href="./images/sprit.svg#icon-phone">
             </use>
           </svg>+38 096 111 11 11</a>
       </address>
@@ -179,6 +179,44 @@
           <a href="tel:+380991111111" class="bottom-svjaz">+38 099 111 11 11</a>
         </address>
       </section>
+
+      <section class="bottom-cozseti">
+        <!-- Прихований заголовок -->
+        <h2 class="scrit">Соцсети</h2>
+        <b class="bottom-prisoedenajtes">Присоеденяйтесь</b>
+        <ul class="social-list cape">
+          <li class="social-list-item">
+            <a href="" class="social-list-item-link">
+              <svg class="social-list-item-svg">
+                <use href="./images/sprit.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-item-link">
+              <svg class="social-list-item-svg">
+                <use href="./images/sprit.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-item-link">
+              <svg class="social-list-item-svg">
+                <use href="./images/sprit.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-item-link">
+              <svg class="social-list-item-svg">
+                <use href="./images/sprit.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </section>
+
+
     </div>
   </footer>
 </body>
