--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprit.svg#icon-instagram.svg"></use>
+                    <use href="./images/sprit.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
@@ -169,7 +169,7 @@
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprit.svg#icon-instagram.svg"></use>
+                    <use href="./images/sprit.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
@@ -205,7 +205,7 @@
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprit.svg#icon-instagram.svg"></use>
+                    <use href="./images/sprit.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
@@ -242,7 +242,7 @@
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprit.svg#icon-instagram.svg"></use>
+                    <use href="./images/sprit.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
