Исправила размер клиентов

--- a/index.html
+++ b/index.html
@@ -274,49 +274,49 @@
       </div>
     </section>
 
-    <!-- Наши клиенты -->
+    <!-- Постоянные клиенты -->
     <section class="rabot clients">
       <div class="container">
         <h2 class="clients-postojannie">Постоянные клиенты</h2>
         <ul class="cape">
           <li class="top-menu">
             <a href="" class="list-item-link">
-              <svg class="list-item-link-svg">
+              <svg class="list-item-link-svg" width="45" height="50">
                 <use href="./images/sprit.svg#icon-client-1"></use>
               </svg>
             </a>
           </li>
           <li class="top-menu">
             <a href="" class="list-item-link">
-              <svg class="list-item-link-svg">
+              <svg class="list-item-link-svg" width="40" height="52">
                 <use href="./images/sprit.svg#icon-client-2"></use>
               </svg>
             </a>
           </li>
           <li class="top-menu">
             <a href="" class="list-item-link">
-              <svg class="list-item-link-svg">
+              <svg class="list-item-link-svg" width="41" height="43">
                 <use href="./images/sprit.svg#icon-client-3"></use>
               </svg>
             </a>
           </li>
           <li class="top-menu">
             <a href="" class="list-item-link">
-              <svg class="list-item-link-svg">
+              <svg class="list-item-link-svg" width="80" height="42">
                 <use href="./images/sprit.svg#icon-client-4"></use>
               </svg>
             </a>
           </li>
           <li class="top-menu">
             <a href="" class="list-item-link">
-              <svg class="list-item-link-svg">
+              <svg class="list-item-link-svg" width="59" height="47">
                 <use href="./images/sprit.svg#icon-client-5"></use>
               </svg>
             </a>
           </li>
           <li class="top-menu">
             <a href="" class="list-item-link">
-              <svg class="list-item-link-svg">
+              <svg class="list-item-link-svg" width="89" height="46">
                 <use href="./images/sprit.svg#icon-client-6"></use>
               </svg>
             </a>
