--- a/index.html
+++ b/index.html
@@ -132,33 +132,32 @@
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
+                    <use href="./images/sprit.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
+                    <use href="./images/sprit.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
+                    <use href="./images/sprit.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/sprit.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
             </ul>
-          </li>
 
           <li class="comanda-photo">
             <img src="./images/foto-olga.jpg" alt="девушка улыбается  фото Ольги" width="270" height="260" />
