--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
         <a href="mailto:info@devstudio.com">
           <svg class="nav-svjaz-convert">
-            <use href="./images/sprit.svg#icon-convert">
+            <use href="./images/sprit.svg#icon-evenlope">
             </use>
           </svg>info@devstudio.com</a>
 
         <a href="tel:+380961111111">
           <svg class="nav-svjaz-phone">
-            <use href="./images/sprit.svg#icon-phone">
+            <use href="./images/sprit.svg#icon-smartphon">
             </use>
           </svg>+38 096 111 11 11</a>
       </address>
@@ -132,32 +132,33 @@
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprit.svg#icon-instagram"></use>
+                    <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprit.svg#icon-twitter"></use>
+                    <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprit.svg#icon-facebook"></use>
+                    <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprit.svg#icon-linkedin"></use>
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
             </ul>
+          </li>
 
           <li class="comanda-photo">
             <img src="./images/foto-olga.jpg" alt="девушка улыбается  фото Ольги" width="270" height="260" />
