--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
         <a href="mailto:info@devstudio.com">
           <svg class="nav-svjaz-convert">
-            <use href="./images/sprit.svg#icon-evenlope">
+            <use href="./images/sprit.svg#icon-envenlope">
             </use>
           </svg>info@devstudio.com</a>
 
         <a href="tel:+380961111111">
           <svg class="nav-svjaz-phone">
-            <use href="./images/sprit.svg#icon-smartphon">
+            <use href="./images/sprit.svg#icon-smartphone">
             </use>
           </svg>+38 096 111 11 11</a>
       </address>
