Исправила иконки смартфона и емейла

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <a href="mailto:info@devstudio.com">
           <svg class="nav-svjaz-convert">
-            <use href="./images/sprit.svg#icon-envenlope">
+            <use href="./images/sprit.svg#icon-envelope">
             </use>
           </svg>info@devstudio.com</a>
 
