--- a/index.html
+++ b/index.html
@@ -33,17 +33,20 @@
       </nav>
       <address class="nav-svjaz">
 
-        <a href="mailto:info@devstudio.com">
-          <svg class="nav-svjaz-convert">
-            <use href="./images/sprit.svg#icon-convert">
-            </use>
-          </svg>info@devstudio.com</a>
-
-        <a href="tel:+380961111111">
-          <svg class="nav-svjaz-phone">
-            <use href="./images/sprit.svg#icon-phone">
-            </use>
-          </svg>+38 096 111 11 11</a>
+        <div>
+          <a href="mailto:info@devstudio.com">
+            <svg class="nav-svjaz-convert" viewBox="0 0 32 32">
+              <use href="./images/sprit.svg#icon-convert">
+              </use>
+            </svg>info@devstudio.com</a>
+        </div>
+        <div>
+          <a href="tel:+380961111111">
+            <svg class="nav-svjaz-phone" viewBox="0 0 32 32">
+              <use href="./images/sprit.svg#icon-phone">
+              </use>
+            </svg>+38 096 111 11 11</a>
+        </div>
       </address>
     </div>
   </header>
