поправляла конверт и почту

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         <div>
           <a href="mailto:info@devstudio.com">
             <svg class="nav-svjaz-convert" viewBox="0 0 32 32">
-              <use href="./images/sprit.svg#icon-convert">
+              <use class="nav-svjaz-convert" href="./images/sprit.svg#icon-convert">
               </use>
             </svg>info@devstudio.com</a>
         </div>
         <div>
           <a href="tel:+380961111111">
             <svg class="nav-svjaz-phone" viewBox="0 0 32 32">
-              <use href="./images/sprit.svg#icon-phone">
+              <use class="nav-svjaz-phone" href="./images/sprit.svg#icon-phone">
               </use>
             </svg>+38 096 111 11 11</a>
         </div>
@@ -135,28 +135,28 @@
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
+                    <use href="./images/sprit.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
+                    <use href="./images/sprit.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
+                    <use href="./images/sprit.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-list-item">
                 <a href="" class="social-list-item-link">
                   <svg class="social-list-item-svg">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/sprit.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
