--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
       </nav>
       <address class="nav-svjaz">
 
-        <div>
-          <a href="mailto:info@devstudio.com">
-            <svg class="nav-svjaz-convert" viewBox="0 0 32 32">
-              <use class="nav-svjaz-convert" href="./images/sprit.svg#icon-convert">
-              </use>
-            </svg>info@devstudio.com</a>
-        </div>
-        <div>
-          <a href="tel:+380961111111">
-            <svg class="nav-svjaz-phone" viewBox="0 0 32 32">
-              <use class="nav-svjaz-phone" href="./images/sprit.svg#icon-phone">
-              </use>
-            </svg>+38 096 111 11 11</a>
-        </div>
+
+        <a href="mailto:info@devstudio.com">
+          <svg class="nav-svjaz-convert">
+            <use href="./images/sprit.svg#icon-convert">
+            </use>
+          </svg>info@devstudio.com</a>
+
+
+        <a href="tel:+380961111111">
+          <svg class="nav-svjaz-phone">
+            <use href="./images/sprit.svg#icon-phone">
+            </use>
+          </svg>+38 096 111 11 11</a>
+
       </address>
     </div>
   </header>
@@ -354,37 +354,40 @@
       <section class="bottom-cozseti">
         <!-- Прихований заголовок -->
         <h2 class="scrit">Соцсети</h2>
-        <b class="bottom-prisoedenajtes">Присоеденяйтесь</b>
-        <ul class="social-list cape">
-          <li class="social-list-item">
-            <a href="" class="social-list-item-link">
-              <svg class="social-list-item-svg">
-                <use href="./images/sprit.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-item-link">
-              <svg class="social-list-item-svg">
-                <use href="./images/sprit.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-item-link">
-              <svg class="social-list-item-svg">
-                <use href="./images/sprit.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="" class="social-list-item-link">
-              <svg class="social-list-item-svg">
-                <use href="./images/sprit.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div>
+          <b class="bottom-prisoedenajtes">Присоеденяйтесь</b>
+          <ul class="social-list cape">
+            <li class="social-list-item">
+              <a href="" class="social-list-item-link">
+                <svg class="social-list-item-svg">
+                  <use href="./images/sprit.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-item-link">
+                <svg class="social-list-item-svg">
+                  <use href="./images/sprit.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-item-link">
+                <svg class="social-list-item-svg">
+                  <use href="./images/sprit.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-item-link">
+                <svg class="social-list-item-svg">
+                  <use href="./images/sprit.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+
       </section>
 
     </div>
